# fw-nrfconnect-mcuboot-1

boot/bootutil/include/bootutil/: sha256.h
boot/bootutil/src/: image_ec256.c  loader.c
boot/zephyr/: CMakeLists.txt  Kconfig  flash_map_extended.c  keys.c  pm.yaml  pm.yml  prj.conf
boot/zephyr/include/: target.h
boot/zephyr/include/mcuboot_config/: mcuboot_config.h
boot/zephyr/include/sysflash/: sysflash.h
docs/: design.md
scripts/imgtool/: image.py  main.py
zephyr/: CMakeLists.txt  Kconfig
